--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
-POSTGRES_URL="postgres://default:VCyR4eS0XIJk@ep-quiet-night-a4iropch-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-quiet-night-a4iropch-pooler.us-east-1.aws.neon.tech"
+POSTGRES_PASSWORD="VCyR4eS0XIJk"
+POSTGRES_DATABASE="verceldb"
