Prueba 4 conexion base de datos con deploy en vercel

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+POSTGRES_URL="postgres://default:VCyR4eS0XIJk@ep-quiet-night-a4iropch-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:VCyR4eS0XIJk@ep-quiet-night-a4iropch-pooler.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:VCyR4eS0XIJk@ep-quiet-night-a4iropch-pooler.us-east-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:VCyR4eS0XIJk@ep-quiet-night-a4iropch.us-east-1.aws.neon.tech:5432/verceldb?sslmode=require"
 POSTGRES_USER="default"
 POSTGRES_HOST="ep-quiet-night-a4iropch-pooler.us-east-1.aws.neon.tech"
 POSTGRES_PASSWORD="VCyR4eS0XIJk"
