--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-big-calendar": "^1.8.9",
     "@vercel/postgres": "^0.8.0",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
+    "react-big-calendar": "^1.12.2",
     "react-dom": "^18",
     "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8",
